# Capa

./: .gitignore  Cargo.toml  README.md  ai_pipeline.py  analyze_scores.rs  app.py  verify_db.rs
config/: capabilities.toml  search.toml  users.toml
index/: .managed.json  meta.json
src/: batch_ingestion.rs  calibration.rs  config.rs  github_client.rs  main.rs  models.rs  pipeline.rs  storage.rs
src/evaluation/: archetypes.rs  distribution.rs  explain.rs  mod.rs  similarity_matrix.rs  snapshots.rs  stability.rs  synthetic.rs
src/extraction/: config.rs  heuristics.rs  mod.rs  models.rs  pipeline.rs  scoring.rs  storage.rs
src/profile/: builder.rs  formatter.rs  mod.rs
src/search/: execute.rs  index.rs  mod.rs  query.rs  ranking.rs  results.rs  schema.rs
src/signals/: activity_analyzer.rs  capability_registry.rs  dependency_parser.rs  file_scanner.rs  language_signal.rs  mod.rs  project_structure.rs
src/similarity/: math.rs  mod.rs  search.rs  vector_builder.rs
static/: main.js  styles.css
templates/: index.html
