[package]
name = "capability_search"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid"] }
uuid = { version = "1", features = ["serde", "v4"] }
dotenvy = "0.15"
anyhow = "1"
chrono = "0.4"
tantivy = "0.22"
toml = "0.8"
base64 = "0.22"

[dev-dependencies]
tempfile = "3"
